# eurorack-nanassound

./: .gitignore  .gitmodules  README.md
Jada/: CMakeLists.txt  sdkconfig
Jada/main/: CMakeLists.txt  Kconfig.projbuild  icon_metronome.c  icon_piano.c  idf_component.yml  lcd.c  lcd.h  lcd_menu.c  lcd_menu.h  main.c  rotary_encoder.c  rotary_encoder.h
Mikronit/: .gitignore  CMakeLists.txt  Mikronit.cpp  osc.cpp  osc.dsp
Mikronit/freertos_config/: FreeRTOSConfig.h
Mini/: README.md
Mini/V1.0/: BOM_Mini_V1.csv
Mini/V2.0/: BOM_Mini_V2.csv  PickAndPlace_PCB_Mini-v2_2025-05-12.csv
Mini/V3.0/: Mini-V3.csv  V3.0.kicad_pcb  V3.0.kicad_prl  V3.0.kicad_pro  V3.0.kicad_sch  pcb_outline.dxf
Mini/V3.0/fabrication/: V3.0-B_Cu.gbr  V3.0-B_Mask.gbr  V3.0-B_Paste.gbr  V3.0-B_Silkscreen.gbr  V3.0-Edge_Cuts.gbr  V3.0-F_Cu.gbr  V3.0-F_Mask.gbr  V3.0-F_Paste.gbr  V3.0-F_Silkscreen.gbr  V3.0-NPTH.drl  V3.0-PTH.drl  V3.0-job.gbrjob
Mini/V3.0/pick-and-place/: V3.0-bottom.pos  V3.0-top.pos
Rohkem/: README.md
Uksed/: BOM.csv  README.md
